#9 - Added route API. Closes #9.
