# openapi.json
@@ -134,6 +134,87 @@
 				}
 			}
 		},
+		"/api/routes": {
+			"summary": "Mobile library routes",
+			"get": {
+				"tags": [
+					"routes"
+				],
+				"description": "Return all mobile library routes",
+				"parameters": [
+					{
+						"name": "organisation_id",
+						"description": "Numeric ID of the organisation the route is run by",
+						"in": "query",
+						"required": false,
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A list of routes"
+					}
+				}
+			},
+			"post": {
+				"tags": [
+					"routes"
+				],
+				"description": "Create a new mobile library route",
+				"responses": {
+					"201": {
+						"description": "Route added"
+					},
+					"422": {
+						"description": "Validation error"
+					}
+				}
+			}
+		},
+		"/api/routes/{id}": {
+			"summary": "A mobile library route",
+			"get": {
+				"tags": [
+					"routes"
+				],
+				"description": "Returns a mobile library route",
+				"parameters": [
+					{
+						"name": "id",
+						"description": "Numeric ID of the route",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "integer"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A route"
+					},
+					"404": {
+						"description": "Not found"
+					}
+				}
+			},
+			"put": {
+				"tags": [
+					"routes"
+				],
+				"description": "Update a mobile library route",
+				"responses": {
+					"200": {
+						"description": "Route updated"
+					},
+					"422": {
+						"description": "Validation error"
+					}
+				}
+			}
+		},
 		"/api/stops": {
 			"summary": "Mobile library stops",
 			"get": {
